# AA-ADMM

./: LICENSE  README.md
Geometry/: ALMGeometrySolver.h  CMakeLists.txt  Constraint.h  FindEigen3.cmake  GeometrySolver.h  LinearRegularization.h  MeshTypes.h  Options.txt  Parameters.h  PlanarityOpt.cpp  README.md  SPDSolver.h  WireMeshOpt.cpp
admm_anderson_hard_zxu/: README.md  testParam.txt
admm_anderson_hard_zxu/cmake/: FindEigen3.cmake  FindGLFW.cmake  FindMKL.cmake
admm_anderson_hard_zxu/samples/: CMakeLists.txt
admm_anderson_hard_zxu/samples/Asia2019/: CMakeLists.txt  beams.cpp  plinkohit.cpp  plinkopony.cpp  windyflag.cpp
admm_anderson_hard_zxu/samples/data/: horse759.ele  horse759.node
admm_anderson_hard_zxu/samples/utils/: AddMeshes.hpp  Application.hpp
admm_anderson_hard_zxu/src/: AndersonAcceleration.h  Collider.hpp  CollisionEnergyTerm.hpp  ConstraintSet.hpp  EnergyTerm.hpp  ExplicitForce.cpp  FastSVD.hpp  PassiveObject.hpp  Solver.cpp  Solver.hpp  SpringEnergyTerm.hpp  TetEnergyTerm.cpp  TetEnergyTerm.hpp  TriEnergyTerm.cpp  TriEnergyTerm.hpp  Types.h
admm_anderson_xzu/: CMakeLists.txt  testAndersonADMM
admm_anderson_xzu/cmake/: FindEigen3.cmake  FindGLFW.cmake  FindMKL.cmake
admm_anderson_xzu/samples/Asia2019/: CMakeLists.txt  beams.cpp
admm_anderson_xzu/samples/utils/: AddMeshes.hpp  Application.hpp
admm_anderson_xzu/src/: AndersonAcceleration.h  Collider.hpp  ConstraintSet.hpp  DynamicObject.hpp  EnergyTerm.hpp  ExplicitForce.cpp  ExplicitForce.hpp  FastSVD.hpp  LinearSolver.hpp  PassiveObject.hpp  Solver.cpp  Solver.hpp  SolverLog.hpp  SpringEnergyTerm.hpp  TetEnergyTerm.cpp  TetEnergyTerm.hpp  TriEnergyTerm.cpp  TriEnergyTerm.hpp
